[package]
name = "ctm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
cmd_lib = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0"
which = "4.2"
itertools = "0.10"
histogram = "0.6"